tests/baselines/reference/unusedParametersInLambda1.errors.txt
tests/cases/compiler/unusedParametersInLambda1.ts(4,17): error TS6133: 'X' is declared but never used.


==== tests/cases/compiler/unusedParametersInLambda1.ts (1 errors) ====
    
    class A {
        public f1() {
            return (X) => {
                    ~
!!! error TS6133: 'X' is declared but never used.
            }
        }
    }